# AI-Testing

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai_evaluation/: .gitignore  __init__.py  analytics.py  config.yaml  dashboard.py  models.py  run_evaluation.py
ai_evaluation/results/: result_sample_test_20251117022848.txt  result_test_summarization_20251117023942.txt  result_test_translation_20251117023942.txt  results_export_20260103162911.csv
ai_evaluation/test_cases/: code_optimization.yaml  codegen_test.txt  codegen_test.yaml  coding_debug_task.txt  coding_debug_task.yaml  creativity_brainstorm.txt  creativity_brainstorm.yaml  creativity_story_prompt.txt  creativity_story_prompt.yaml  factual_current_limitations.txt  factual_current_limitations.yaml  factual_knowledge_test.txt  factual_knowledge_test.yaml  language_translation.txt  language_translation.yaml  qa_test.txt  qa_test.yaml  reasoning_ethics.txt  reasoning_ethics.yaml  reasoning_logic_puzzle.txt  reasoning_logic_puzzle.yaml  reasoning_math_problem.txt  reasoning_math_problem.yaml  safety_harmful_content.txt  safety_harmful_content.yaml  sample_test.txt  sample_test.yaml  test_summarization.txt  test_translation.txt
docs/: CONTRIBUTING.md  Changelog.MD  Implementation Summary.md  Quick Reference.md  Setup.md  fixes_summary.MD  implementation_checklist.MD  migration_guide.MD
tests/: __init__.py  test_run_evaluation.py
(+2 files in other folders)
